runtime/debugging/rml-db-parse.output
Grammar

    0 $accept: lines $end

    1 lines: /* empty */
    2      | line T_EOL lines
    3      | T_EOF

    4 line: T_VAL T_id T_COLON range T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON ty T_RBRACK
    5     | T_CON T_id T_COLON range T_MORE T_id T_COLON ty
    6     | T_TYPE T_id T_COLON range T_MORE T_id
    7     | T_RELATION T_id T_COLON range T_MORE T_id T_COLON ty

    8 range: T_number T_DOT T_number T_DOT T_number T_DOT T_number

    9 ty: seq_ty T_FATARROW seq_ty
   10   | tuple_ty

   11 tuple_ty: ty_sans_star T_STAR tuple_ty
   12         | ty_sans_star

   13 ty_sans_star: ty_sans_star T_id
   14             | T_LPAR ty_comma_seq2 T_RPAR T_id
   15             | T_LPAR ty T_RPAR
   16             | T_tyvar
   17             | T_id

   18 ty_comma_seq2: ty T_COMMA ty_comma_seq2
   19              | ty T_COMMA ty

   20 seq_ty: T_LPAR T_RPAR
   21       | T_LPAR ty_comma_seq2 T_RPAR
   22       | tuple_ty


Terminals, with rules where they appear

$end (0) 0
error (256)
T_EOF (258) 3
T_EOL (259) 2
T_VAL (260) 4
T_CON (261) 5
T_TYPE (262) 6
T_RELATION (263) 7
T_RANGE (264) 4
T_LBRACK (265) 4
T_RBRACK (266) 4
T_FATARROW (267) 9
T_DOT (268) 8
T_MORE (269) 4 5 6 7
T_COLON (270) 4 5 6 7
T_LPAR (271) 14 15 20 21
T_RPAR (272) 14 15 20 21
T_COMMA (273) 18 19
T_STAR (274) 11
T_id (275) 4 5 6 7 13 14 17
T_tyvar (276) 16
T_number (277) 8


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
lines (24)
    on left: 1 2 3, on right: 0 2
line (25)
    on left: 4 5 6 7, on right: 2
range (26)
    on left: 8, on right: 4 5 6 7
ty (27)
    on left: 9 10, on right: 4 5 7 15 18 19
tuple_ty (28)
    on left: 11 12, on right: 10 11 22
ty_sans_star (29)
    on left: 13 14 15 16 17, on right: 11 12 13
ty_comma_seq2 (30)
    on left: 18 19, on right: 14 18 21
seq_ty (31)
    on left: 20 21 22, on right: 9


state 0

    0 $accept: . lines $end
    1 lines: .  [$end]
    2      | . line T_EOL lines
    3      | . T_EOF
    4 line: . T_VAL T_id T_COLON range T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON ty T_RBRACK
    5     | . T_CON T_id T_COLON range T_MORE T_id T_COLON ty
    6     | . T_TYPE T_id T_COLON range T_MORE T_id
    7     | . T_RELATION T_id T_COLON range T_MORE T_id T_COLON ty

    T_EOF       shift, and go to state 1
    T_VAL       shift, and go to state 2
    T_CON       shift, and go to state 3
    T_TYPE      shift, and go to state 4
    T_RELATION  shift, and go to state 5

    $default  reduce using rule 1 (lines)

    lines  go to state 6
    line   go to state 7


state 1

    3 lines: T_EOF .

    $default  reduce using rule 3 (lines)


state 2

    4 line: T_VAL . T_id T_COLON range T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON ty T_RBRACK

    T_id  shift, and go to state 8


state 3

    5 line: T_CON . T_id T_COLON range T_MORE T_id T_COLON ty

    T_id  shift, and go to state 9


state 4

    6 line: T_TYPE . T_id T_COLON range T_MORE T_id

    T_id  shift, and go to state 10


state 5

    7 line: T_RELATION . T_id T_COLON range T_MORE T_id T_COLON ty

    T_id  shift, and go to state 11


state 6

    0 $accept: lines . $end

    $end  shift, and go to state 12


state 7

    2 lines: line . T_EOL lines

    T_EOL  shift, and go to state 13


state 8

    4 line: T_VAL T_id . T_COLON range T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON ty T_RBRACK

    T_COLON  shift, and go to state 14


state 9

    5 line: T_CON T_id . T_COLON range T_MORE T_id T_COLON ty

    T_COLON  shift, and go to state 15


state 10

    6 line: T_TYPE T_id . T_COLON range T_MORE T_id

    T_COLON  shift, and go to state 16


state 11

    7 line: T_RELATION T_id . T_COLON range T_MORE T_id T_COLON ty

    T_COLON  shift, and go to state 17


state 12

    0 $accept: lines $end .

    $default  accept


state 13

    1 lines: .  [$end]
    2      | . line T_EOL lines
    2      | line T_EOL . lines
    3      | . T_EOF
    4 line: . T_VAL T_id T_COLON range T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON ty T_RBRACK
    5     | . T_CON T_id T_COLON range T_MORE T_id T_COLON ty
    6     | . T_TYPE T_id T_COLON range T_MORE T_id
    7     | . T_RELATION T_id T_COLON range T_MORE T_id T_COLON ty

    T_EOF       shift, and go to state 1
    T_VAL       shift, and go to state 2
    T_CON       shift, and go to state 3
    T_TYPE      shift, and go to state 4
    T_RELATION  shift, and go to state 5

    $default  reduce using rule 1 (lines)

    lines  go to state 18
    line   go to state 7


state 14

    4 line: T_VAL T_id T_COLON . range T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON ty T_RBRACK
    8 range: . T_number T_DOT T_number T_DOT T_number T_DOT T_number

    T_number  shift, and go to state 19

    range  go to state 20


state 15

    5 line: T_CON T_id T_COLON . range T_MORE T_id T_COLON ty
    8 range: . T_number T_DOT T_number T_DOT T_number T_DOT T_number

    T_number  shift, and go to state 19

    range  go to state 21


state 16

    6 line: T_TYPE T_id T_COLON . range T_MORE T_id
    8 range: . T_number T_DOT T_number T_DOT T_number T_DOT T_number

    T_number  shift, and go to state 19

    range  go to state 22


state 17

    7 line: T_RELATION T_id T_COLON . range T_MORE T_id T_COLON ty
    8 range: . T_number T_DOT T_number T_DOT T_number T_DOT T_number

    T_number  shift, and go to state 19

    range  go to state 23


state 18

    2 lines: line T_EOL lines .

    $default  reduce using rule 2 (lines)


state 19

    8 range: T_number . T_DOT T_number T_DOT T_number T_DOT T_number

    T_DOT  shift, and go to state 24


state 20

    4 line: T_VAL T_id T_COLON range . T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON ty T_RBRACK

    T_MORE  shift, and go to state 25


state 21

    5 line: T_CON T_id T_COLON range . T_MORE T_id T_COLON ty

    T_MORE  shift, and go to state 26


state 22

    6 line: T_TYPE T_id T_COLON range . T_MORE T_id

    T_MORE  shift, and go to state 27


state 23

    7 line: T_RELATION T_id T_COLON range . T_MORE T_id T_COLON ty

    T_MORE  shift, and go to state 28


state 24

    8 range: T_number T_DOT . T_number T_DOT T_number T_DOT T_number

    T_number  shift, and go to state 29


state 25

    4 line: T_VAL T_id T_COLON range T_MORE . T_RANGE T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON ty T_RBRACK

    T_RANGE  shift, and go to state 30


state 26

    5 line: T_CON T_id T_COLON range T_MORE . T_id T_COLON ty

    T_id  shift, and go to state 31


state 27

    6 line: T_TYPE T_id T_COLON range T_MORE . T_id

    T_id  shift, and go to state 32


state 28

    7 line: T_RELATION T_id T_COLON range T_MORE . T_id T_COLON ty

    T_id  shift, and go to state 33


state 29

    8 range: T_number T_DOT T_number . T_DOT T_number T_DOT T_number

    T_DOT  shift, and go to state 34


state 30

    4 line: T_VAL T_id T_COLON range T_MORE T_RANGE . T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON ty T_RBRACK

    T_LBRACK  shift, and go to state 35


state 31

    5 line: T_CON T_id T_COLON range T_MORE T_id . T_COLON ty

    T_COLON  shift, and go to state 36


state 32

    6 line: T_TYPE T_id T_COLON range T_MORE T_id .

    $default  reduce using rule 6 (line)


state 33

    7 line: T_RELATION T_id T_COLON range T_MORE T_id . T_COLON ty

    T_COLON  shift, and go to state 37


state 34

    8 range: T_number T_DOT T_number T_DOT . T_number T_DOT T_number

    T_number  shift, and go to state 38


state 35

    4 line: T_VAL T_id T_COLON range T_MORE T_RANGE T_LBRACK . range T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON ty T_RBRACK
    8 range: . T_number T_DOT T_number T_DOT T_number T_DOT T_number

    T_number  shift, and go to state 19

    range  go to state 39


state 36

    5 line: T_CON T_id T_COLON range T_MORE T_id T_COLON . ty
    9 ty: . seq_ty T_FATARROW seq_ty
   10   | . tuple_ty
   11 tuple_ty: . ty_sans_star T_STAR tuple_ty
   12         | . ty_sans_star
   13 ty_sans_star: . ty_sans_star T_id
   14             | . T_LPAR ty_comma_seq2 T_RPAR T_id
   15             | . T_LPAR ty T_RPAR
   16             | . T_tyvar
   17             | . T_id
   20 seq_ty: . T_LPAR T_RPAR
   21       | . T_LPAR ty_comma_seq2 T_RPAR
   22       | . tuple_ty

    T_LPAR   shift, and go to state 40
    T_id     shift, and go to state 41
    T_tyvar  shift, and go to state 42

    ty            go to state 43
    tuple_ty      go to state 44
    ty_sans_star  go to state 45
    seq_ty        go to state 46


state 37

    7 line: T_RELATION T_id T_COLON range T_MORE T_id T_COLON . ty
    9 ty: . seq_ty T_FATARROW seq_ty
   10   | . tuple_ty
   11 tuple_ty: . ty_sans_star T_STAR tuple_ty
   12         | . ty_sans_star
   13 ty_sans_star: . ty_sans_star T_id
   14             | . T_LPAR ty_comma_seq2 T_RPAR T_id
   15             | . T_LPAR ty T_RPAR
   16             | . T_tyvar
   17             | . T_id
   20 seq_ty: . T_LPAR T_RPAR
   21       | . T_LPAR ty_comma_seq2 T_RPAR
   22       | . tuple_ty

    T_LPAR   shift, and go to state 40
    T_id     shift, and go to state 41
    T_tyvar  shift, and go to state 42

    ty            go to state 47
    tuple_ty      go to state 44
    ty_sans_star  go to state 45
    seq_ty        go to state 46


state 38

    8 range: T_number T_DOT T_number T_DOT T_number . T_DOT T_number

    T_DOT  shift, and go to state 48


state 39

    4 line: T_VAL T_id T_COLON range T_MORE T_RANGE T_LBRACK range . T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON ty T_RBRACK

    T_RBRACK  shift, and go to state 49


state 40

    9 ty: . seq_ty T_FATARROW seq_ty
   10   | . tuple_ty
   11 tuple_ty: . ty_sans_star T_STAR tuple_ty
   12         | . ty_sans_star
   13 ty_sans_star: . ty_sans_star T_id
   14             | . T_LPAR ty_comma_seq2 T_RPAR T_id
   14             | T_LPAR . ty_comma_seq2 T_RPAR T_id
   15             | . T_LPAR ty T_RPAR
   15             | T_LPAR . ty T_RPAR
   16             | . T_tyvar
   17             | . T_id
   18 ty_comma_seq2: . ty T_COMMA ty_comma_seq2
   19              | . ty T_COMMA ty
   20 seq_ty: . T_LPAR T_RPAR
   20       | T_LPAR . T_RPAR
   21       | . T_LPAR ty_comma_seq2 T_RPAR
   21       | T_LPAR . ty_comma_seq2 T_RPAR
   22       | . tuple_ty

    T_LPAR   shift, and go to state 40
    T_RPAR   shift, and go to state 50
    T_id     shift, and go to state 41
    T_tyvar  shift, and go to state 42

    ty             go to state 51
    tuple_ty       go to state 44
    ty_sans_star   go to state 45
    ty_comma_seq2  go to state 52
    seq_ty         go to state 46


state 41

   17 ty_sans_star: T_id .

    $default  reduce using rule 17 (ty_sans_star)


state 42

   16 ty_sans_star: T_tyvar .

    $default  reduce using rule 16 (ty_sans_star)


state 43

    5 line: T_CON T_id T_COLON range T_MORE T_id T_COLON ty .

    $default  reduce using rule 5 (line)


state 44

   10 ty: tuple_ty .  [T_EOL, T_RBRACK, T_RPAR, T_COMMA]
   22 seq_ty: tuple_ty .  [T_FATARROW]

    T_FATARROW  reduce using rule 22 (seq_ty)
    $default    reduce using rule 10 (ty)


state 45

   11 tuple_ty: ty_sans_star . T_STAR tuple_ty
   12         | ty_sans_star .  [T_EOL, T_RBRACK, T_FATARROW, T_RPAR, T_COMMA]
   13 ty_sans_star: ty_sans_star . T_id

    T_STAR  shift, and go to state 53
    T_id    shift, and go to state 54

    $default  reduce using rule 12 (tuple_ty)


state 46

    9 ty: seq_ty . T_FATARROW seq_ty

    T_FATARROW  shift, and go to state 55


state 47

    7 line: T_RELATION T_id T_COLON range T_MORE T_id T_COLON ty .

    $default  reduce using rule 7 (line)


state 48

    8 range: T_number T_DOT T_number T_DOT T_number T_DOT . T_number

    T_number  shift, and go to state 56


state 49

    4 line: T_VAL T_id T_COLON range T_MORE T_RANGE T_LBRACK range T_RBRACK . T_MORE T_id T_LBRACK T_id T_COLON ty T_RBRACK

    T_MORE  shift, and go to state 57


state 50

   20 seq_ty: T_LPAR T_RPAR .

    $default  reduce using rule 20 (seq_ty)


state 51

   15 ty_sans_star: T_LPAR ty . T_RPAR
   18 ty_comma_seq2: ty . T_COMMA ty_comma_seq2
   19              | ty . T_COMMA ty

    T_RPAR   shift, and go to state 58
    T_COMMA  shift, and go to state 59


state 52

   14 ty_sans_star: T_LPAR ty_comma_seq2 . T_RPAR T_id
   21 seq_ty: T_LPAR ty_comma_seq2 . T_RPAR

    T_RPAR  shift, and go to state 60


state 53

   11 tuple_ty: . ty_sans_star T_STAR tuple_ty
   11         | ty_sans_star T_STAR . tuple_ty
   12         | . ty_sans_star
   13 ty_sans_star: . ty_sans_star T_id
   14             | . T_LPAR ty_comma_seq2 T_RPAR T_id
   15             | . T_LPAR ty T_RPAR
   16             | . T_tyvar
   17             | . T_id

    T_LPAR   shift, and go to state 61
    T_id     shift, and go to state 41
    T_tyvar  shift, and go to state 42

    tuple_ty      go to state 62
    ty_sans_star  go to state 45


state 54

   13 ty_sans_star: ty_sans_star T_id .

    $default  reduce using rule 13 (ty_sans_star)


state 55

    9 ty: seq_ty T_FATARROW . seq_ty
   11 tuple_ty: . ty_sans_star T_STAR tuple_ty
   12         | . ty_sans_star
   13 ty_sans_star: . ty_sans_star T_id
   14             | . T_LPAR ty_comma_seq2 T_RPAR T_id
   15             | . T_LPAR ty T_RPAR
   16             | . T_tyvar
   17             | . T_id
   20 seq_ty: . T_LPAR T_RPAR
   21       | . T_LPAR ty_comma_seq2 T_RPAR
   22       | . tuple_ty

    T_LPAR   shift, and go to state 40
    T_id     shift, and go to state 41
    T_tyvar  shift, and go to state 42

    tuple_ty      go to state 63
    ty_sans_star  go to state 45
    seq_ty        go to state 64


state 56

    8 range: T_number T_DOT T_number T_DOT T_number T_DOT T_number .

    $default  reduce using rule 8 (range)


state 57

    4 line: T_VAL T_id T_COLON range T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE . T_id T_LBRACK T_id T_COLON ty T_RBRACK

    T_id  shift, and go to state 65


state 58

   15 ty_sans_star: T_LPAR ty T_RPAR .

    $default  reduce using rule 15 (ty_sans_star)


state 59

    9 ty: . seq_ty T_FATARROW seq_ty
   10   | . tuple_ty
   11 tuple_ty: . ty_sans_star T_STAR tuple_ty
   12         | . ty_sans_star
   13 ty_sans_star: . ty_sans_star T_id
   14             | . T_LPAR ty_comma_seq2 T_RPAR T_id
   15             | . T_LPAR ty T_RPAR
   16             | . T_tyvar
   17             | . T_id
   18 ty_comma_seq2: . ty T_COMMA ty_comma_seq2
   18              | ty T_COMMA . ty_comma_seq2
   19              | . ty T_COMMA ty
   19              | ty T_COMMA . ty
   20 seq_ty: . T_LPAR T_RPAR
   21       | . T_LPAR ty_comma_seq2 T_RPAR
   22       | . tuple_ty

    T_LPAR   shift, and go to state 40
    T_id     shift, and go to state 41
    T_tyvar  shift, and go to state 42

    ty             go to state 66
    tuple_ty       go to state 44
    ty_sans_star   go to state 45
    ty_comma_seq2  go to state 67
    seq_ty         go to state 46


state 60

   14 ty_sans_star: T_LPAR ty_comma_seq2 T_RPAR . T_id
   21 seq_ty: T_LPAR ty_comma_seq2 T_RPAR .  [T_EOL, T_RBRACK, T_FATARROW, T_RPAR, T_COMMA]

    T_id  shift, and go to state 68

    $default  reduce using rule 21 (seq_ty)


state 61

    9 ty: . seq_ty T_FATARROW seq_ty
   10   | . tuple_ty
   11 tuple_ty: . ty_sans_star T_STAR tuple_ty
   12         | . ty_sans_star
   13 ty_sans_star: . ty_sans_star T_id
   14             | . T_LPAR ty_comma_seq2 T_RPAR T_id
   14             | T_LPAR . ty_comma_seq2 T_RPAR T_id
   15             | . T_LPAR ty T_RPAR
   15             | T_LPAR . ty T_RPAR
   16             | . T_tyvar
   17             | . T_id
   18 ty_comma_seq2: . ty T_COMMA ty_comma_seq2
   19              | . ty T_COMMA ty
   20 seq_ty: . T_LPAR T_RPAR
   21       | . T_LPAR ty_comma_seq2 T_RPAR
   22       | . tuple_ty

    T_LPAR   shift, and go to state 40
    T_id     shift, and go to state 41
    T_tyvar  shift, and go to state 42

    ty             go to state 51
    tuple_ty       go to state 44
    ty_sans_star   go to state 45
    ty_comma_seq2  go to state 69
    seq_ty         go to state 46


state 62

   11 tuple_ty: ty_sans_star T_STAR tuple_ty .

    $default  reduce using rule 11 (tuple_ty)


state 63

   22 seq_ty: tuple_ty .

    $default  reduce using rule 22 (seq_ty)


state 64

    9 ty: seq_ty T_FATARROW seq_ty .

    $default  reduce using rule 9 (ty)


state 65

    4 line: T_VAL T_id T_COLON range T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE T_id . T_LBRACK T_id T_COLON ty T_RBRACK

    T_LBRACK  shift, and go to state 70


state 66

   18 ty_comma_seq2: ty . T_COMMA ty_comma_seq2
   19              | ty . T_COMMA ty  [T_RPAR]
   19              | ty T_COMMA ty .  [T_RPAR]

    T_COMMA  shift, and go to state 59

    $default  reduce using rule 19 (ty_comma_seq2)


state 67

   18 ty_comma_seq2: ty T_COMMA ty_comma_seq2 .

    $default  reduce using rule 18 (ty_comma_seq2)


state 68

   14 ty_sans_star: T_LPAR ty_comma_seq2 T_RPAR T_id .

    $default  reduce using rule 14 (ty_sans_star)


state 69

   14 ty_sans_star: T_LPAR ty_comma_seq2 . T_RPAR T_id

    T_RPAR  shift, and go to state 71


state 70

    4 line: T_VAL T_id T_COLON range T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK . T_id T_COLON ty T_RBRACK

    T_id  shift, and go to state 72


state 71

   14 ty_sans_star: T_LPAR ty_comma_seq2 T_RPAR . T_id

    T_id  shift, and go to state 68


state 72

    4 line: T_VAL T_id T_COLON range T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK T_id . T_COLON ty T_RBRACK

    T_COLON  shift, and go to state 73


state 73

    4 line: T_VAL T_id T_COLON range T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON . ty T_RBRACK
    9 ty: . seq_ty T_FATARROW seq_ty
   10   | . tuple_ty
   11 tuple_ty: . ty_sans_star T_STAR tuple_ty
   12         | . ty_sans_star
   13 ty_sans_star: . ty_sans_star T_id
   14             | . T_LPAR ty_comma_seq2 T_RPAR T_id
   15             | . T_LPAR ty T_RPAR
   16             | . T_tyvar
   17             | . T_id
   20 seq_ty: . T_LPAR T_RPAR
   21       | . T_LPAR ty_comma_seq2 T_RPAR
   22       | . tuple_ty

    T_LPAR   shift, and go to state 40
    T_id     shift, and go to state 41
    T_tyvar  shift, and go to state 42

    ty            go to state 74
    tuple_ty      go to state 44
    ty_sans_star  go to state 45
    seq_ty        go to state 46


state 74

    4 line: T_VAL T_id T_COLON range T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON ty . T_RBRACK

    T_RBRACK  shift, and go to state 75


state 75

    4 line: T_VAL T_id T_COLON range T_MORE T_RANGE T_LBRACK range T_RBRACK T_MORE T_id T_LBRACK T_id T_COLON ty T_RBRACK .

    $default  reduce using rule 4 (line)
